Fixed SingleColumnSection overflowing page. Removed title from ImageSection, title should be in the Markdown field

--- a/frontend/app/src/components/ImageSection/style.scss
+++ b/frontend/app/src/components/ImageSection/style.scss
@@ -37,13 +37,7 @@
             margin-left: 25px;
             align-items: flex-start;
         }
-        &__title {
-            margin: 0;
-            font-size: 40px;
-            font-weight: bold;
-            text-align: center;
-            font-family: 'Montserrat';
-        }
+
         &__content {
             font-size: 18px;
             font-family: 'Lato';
