--- a/frontend/app/src/components/SingleColumnSection/style.scss
+++ b/frontend/app/src/components/SingleColumnSection/style.scss
@@ -7,7 +7,7 @@
     &--title {
         width: 100%;
         max-width: 900px;
-        font-size: 30px;
+        font-size: 25px;
         text-align: center;
         margin: 0;
         @include bp-med {
